; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_kernel_if.c_vmci_memcpy_from_queue_v.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_kernel_if.c_vmci_memcpy_from_queue_v.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmci_queue = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmci_memcpy_from_queue_v(i8* %0, i64 %1, %struct.vmci_queue* %2, i32 %3, i64 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.vmci_queue*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i64 %1, i64* %9, align 8
  store %struct.vmci_queue* %2, %struct.vmci_queue** %10, align 8
  store i32 %3, i32* %11, align 4
  store i64 %4, i64* %12, align 8
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @ASSERT(i32 %15)
  %17 = load i8*, i8** %8, align 8
  %18 = load %struct.vmci_queue*, %struct.vmci_queue** %10, align 8
  %19 = load i32, i32* %11, align 4
  %20 = load i64, i64* %12, align 8
  %21 = call i32 @__vmci_memcpy_from_queue(i8* %17, %struct.vmci_queue* %18, i32 %19, i64 %20, i32 1)
  ret i32 %21
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @__vmci_memcpy_from_queue(i8*, %struct.vmci_queue*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
